# rustenAiGym

./: Cargo.toml  Drawing 2025-02-23 21.35.56.excalidraw.md  README.md  history.txt  kodesnutter.md  rustfmt.toml
src/: main.rs
src/environments/: GenomeStuff.rs  LunarLanderEnvironment.rs  camera_stuff.rs  drawNetwork.rs  draw_network.rs  felles_miljø_traits.rs  flat_bakke_simulasjon.rs  genomMuteringer.rs  genom_muteringer.rs  genome_stuff.rs  lunar_lander_environment.rs  mod.rs  moving_plank.rs  simulation_teller.rs
src/environments/gammelt_2d/: evolution_steps_implementation_plugin.rs  flat_bakke_simulasjon.rs  individ_watching_2d_camera.rs  individuals_behavior_for_2d_environments.rs  lunar_lander_environment2d.rs  mod.rs  moving_plank_2d.rs  moving_plank_with_user_input_2d_plugin.rs  spawn_2d_individ_plugin.rs
src/environments/tre_d/: individ_watching_3d_camera.rs  lunar_lander_environment_3d.rs  lunar_lander_individual_behavior.rs  mod.rs  moving_plank_with_user_input_3d_plugin.rs  spawn_lunar_lander_individ_plugin.rs  user_input_3d_plugin.rs
src/evolusjon/: evolusjon_steg_plugin.rs  hjerne_fenotype.rs  mod.rs  phenotype_plugin.rs
src/genome/: genom_muteringer.rs  genome_stuff.rs  mod.rs
src/monitoring/: camera_stuff.rs  draw_network.rs  hyllerepresentasjon.rs  in_focus_stuff.rs  knapp_meny.rs  mod.rs  simulation_teller.rs
src/populasjon_handlinger/: mod.rs  population_sammenligninger.rs
