[package]
name = "rustenAiGym"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#bevy = "0.13.2"
#bevy = "0.14.0"
bevy = { version="0.14.0", features=["wayland"] }
rand = "0.8.5"
log = "0.4.22"

#only needed for environments
#bevy_rapier2d = "0.27.0"
#bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier.git" }

bevy-inspector-egui = "0.25.0"
#
#
[profile.dev]
opt-level =1

[profile.dev.package."*"]
opt-level = 3
