[package]
name = "rustenAiGym"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#bevy = "0.13.2"
#bevy = "0.14.0"
bevy = { version = "0.15.0", features = ["dynamic_linking", "wayland"] }
rand = "0.8.5"
log = "0.4.22"

#only needed for environments
#bevy_rapier2d = "0.27.0"
#bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier.git" }

# For 2D applications:
avian2d = { version = "0.2.0", features = ["2d"] }
#avian2d = { git = "https://github.com/Jondolf/avian.git", features = ["2d"] }


#bevy-inspector-egui = "0.25.2"
bevy-inspector-egui = "0.28.0"
lazy_static = "1.5.0"

#
#
[profile.dev]
opt-level =1

[profile.dev.package."*"]
opt-level = 3

#https://bevyengine.org/learn/quick-start/getting-started/setup/#enable-fast-compiles-optional
#https://stackoverflow.com/questions/74276239/why-does-this-bevy-project-take-so-long-to-compile-and-launch